--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -1,5 +1,5 @@
 #
-# Check for the Squid Project Merg Process criteria
+# Check for the Squid Project Merge Process criteria
 # published at https://wiki.squid-cache.org/MergeProcedure#votes
 #
 name: PR Approval
