--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -33,6 +33,9 @@ jobs:
   Review:
     if: ${{ github.repository }} == 'squid-cache/squid'
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout Squid sources
